# PS_mSigLIP

./: README.md  extract_backbone_from_ckpt.py  lightning_data.py  lightning_models.py  prepare_checkpoints.py  pyproject.toml  requirements.txt  run.sh  test.py  trainer.py
_configs/: clip.yaml  siglip.yaml
config/: clip.yaml  fix_everything_but_backbone.yaml  irra.yaml  m_siglip.yaml  m_siglip_full_cuhk_pedes_irra.yaml  siglip.yaml  tbps_clip.yaml
config/aug/: irra.yaml  siglip.yaml  tbps_clip.yaml
config/backbone/: clip.yaml  m_siglip.yaml  siglip.yaml
config/dataset/: cuhk_pedes.yaml  cuhk_pedes_10_percent.yaml  vn3k_en.yaml  vn3k_mixed.yaml  vn3k_vi.yaml
config/logger/: default.yaml
config/lora/: default.yaml
config/loss/: clip_irra.yaml  irra.yaml  tbps_clip.yaml
config/optimizer/: irra_decay.yaml  irra_no_decay.yaml  siglip.yaml  tbps_clip_no_decay.yaml
config/scheduler/: irra.yaml  tbps_clip.yaml
config/tokenizer/: clip.yaml  m_siglip.yaml  siglip.yaml
config/trainer/: irra.yaml  siglip.yaml
data/: bases.py  build.py  cuhkpedes.py  rstpreid.py  sampler.py  sampler_ddp.py  vn3k_en.py  vn3k_mixed.py  vn3k_vi.py
data/augmentation/: custom_transform.py  eda.py  text_transform.py  transform.py
model/: __init__.py  build.py  layers.py  lora.py  objectives.py  reid_objectives.py  tbps.py
model/clip/: feature_extraction_clip.py  modeling_clip.py
solver/: build.py  lr_scheduler.py
test/: loss.py
utils/: config.py  layer_resize.py  logger.py  metrics.py  options.py  parse_module_str.py  tokenizer_utils.py  visualize_test.py
(+10 files in other folders)
